--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -46,6 +46,24 @@
 			position: relative;
 		}
 
+		// Adjust for higher res
+		.menu {
+			width: 15% !important;
+		}
+
+		.row {
+			max-width: none !important;
+		}
+
+		.grid {
+			width: 85% !important;
+
+			.row {
+				height: 33.33333vh !important;
+			}
+
+		}
+
 	// Positioning
 		@mixin center {
 			position: relative;
@@ -77,8 +95,8 @@
 	}
 
 	html, body {
-		height: 100%;
-		width: 100%;
+		height: 100vh;
+		width: 100vw;
 	}
 
 	body {
