--- a/assets/scss/foundation/_functions.scss
+++ b/assets/scss/foundation/_functions.scss
@@ -7,13 +7,13 @@ $rem-base: 16px !default;
 
 // IMPORT ONCE
 // We use this to prevent styles from being loaded multiple times for compenents that rely on other components. 
-$modules: () !default;
-@mixin exports($name) {
-  @if (index($modules, $name) == false) {
-    $modules: append($modules, $name);
-    @content;
-  }
-}
+ $modules: () !default;
+ @mixin exports($name) {
+   @if(not index($modules, $name)) {
+     $modules: append($modules, $name) !global;
+     @content;
+   }
+ }
 
 //
 // @functions
